<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#606060"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="spacesolonew.info.dicj.spacesolo.MainActivity"
    >

    <RelativeLayout
        android:id="@+id/RL1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/IMV1"
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:src="@drawable/spaceship"/>

        <ProgressBar
            android:id="@+id/ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:max="10"
            android:progress="0"
            android:layout_alignBottom="@id/IMV1"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/RL2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RL1">

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="5dp"></View>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:id="@+id/LL1"
            android:layout_width="wrap_content"
            android:layout_height="145dp"
            android:layout_below="@id/view1"
            >

            <RelativeLayout
                android:id="@+id/RL1inLL1"
                android:layout_width="158dp"
                android:layout_height="145dp"
                android:background="@drawable/wall"
                android:layout_marginRight="5dp">

                <TextView
                    android:id="@+id/TVbtn1"
                    android:layout_width="125dp"
                    android:layout_height="25dp"
                    android:textColor="#FF0000"
                    android:textSize="20dp"
                    android:text="@string/hyperspace"
                    android:background="#D7D7D7"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"/>

                <ImageButton
                    android:id="@+id/btn1"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:background="@drawable/darkredbutton"
                    android:layout_below="@id/TVbtn1"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RL2inLL1"
                android:layout_width="157dp"
                android:layout_height="145dp"
                android:background="@drawable/wall"
                android:layout_marginLeft="5dp">
                <TextView
                    android:id="@+id/TVbtn4"
                    android:layout_width="125dp"
                    android:layout_height="25dp"
                    android:textColor="#FF0000"
                    android:textSize="20dp"
                    android:text="@string/IDK"
                    android:textAlignment="center"
                    android:background="#D7D7D7"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"/>

                <ImageButton
                    android:id="@+id/btn4"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:background="@drawable/interupteurresverse"
                    android:layout_below="@id/TVbtn4"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    />


            </RelativeLayout>


        </LinearLayout>
        <View
            android:id="@+id/view2"
            android:layout_below="@id/LL1"
            android:layout_width="match_parent"
            android:layout_height="5dp"></View>

        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:id="@+id/LL2"
            android:layout_width="wrap_content"
            android:layout_height="145dp"
            android:layout_below="@id/view2">

            <RelativeLayout
                android:id="@+id/RL1inLL2"
                android:layout_width="157dp"
                android:layout_height="145dp"
                android:background="@drawable/wall2"
                android:layout_marginRight="5dp">

                <TextView
                    android:id="@+id/TVbtn3"
                    android:layout_width="125dp"
                    android:layout_height="25dp"
                    android:textColor="#FF0000"
                    android:textSize="15dp"
                    android:text="@string/droite"
                    android:textAlignment="center"
                    android:background="#D7D7D7"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"/>

                <ImageButton
                    android:id="@+id/btn3"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:background="@drawable/interupteur"
                    android:layout_below="@id/TVbtn3"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RL2inLL2"
                android:layout_width="157dp"
                android:layout_height="145dp"
                android:background="@drawable/wall2"
                android:layout_marginLeft="5dp">

                <TextView
                    android:id="@+id/TVbtn2"
                    android:layout_width="125dp"
                    android:layout_height="25dp"
                    android:textColor="#FF0000"
                    android:textSize="15dp"
                    android:text="@string/gauche"
                    android:textAlignment="center"
                    android:background="#D7D7D7"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"/>

                <ImageButton
                    android:id="@+id/btn2"
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:background="@drawable/darkredbutton"
                    android:layout_below="@id/TVbtn2"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    />
            </RelativeLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        </RelativeLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/endLayout"
        android:visibility="gone"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:background="#000000">

        <TextView
            android:id="@+id/TVFin"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textColor="#FF0000"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:background="#FFFFFF"
            android:text="@string/finparti"/>


        <TextView
            android:id="@+id/ScoreFinal"
            android:textColor="#FFFFFF"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="150dp"
            android:textAlignment="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rejouer"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="250dp"/>

        <Button
            android:id="@+id/btnYes"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="35dp"
            android:text="@string/yes"
            android:textSize="25dp"/>

        <Button
            android:id="@+id/btnNo"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="165dp"
            android:text="@string/no"
            android:textSize="25dp"/>
    </FrameLayout>
</RelativeLayout>


